--- a/html/aircraft_admin.html
+++ b/html/aircraft_admin.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- NAVBAR start -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">MCC APPLICATION</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -63,37 +63,37 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="date_received" placeholder="Date receiv." oninput="validateDate(this)" required>
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="date_received" placeholder="Date receiv." oninput="validateDate(this)" required>
                             </div>
                             <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="registration" placeholder="Registration" required>
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="registration" placeholder="Registration" required>
                             </div>
                             <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="type" placeholder="TYPE" required>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="engine" placeholder="Engine" required>
-                            </div>
-                            <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="msn" placeholder="MSN" required>
-                            </div>
-                            <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="effectivity" placeholder="EFFECTIVITY">
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="type" placeholder="TYPE" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="selcal" placeholder="SELCAL">
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="engine" placeholder="Engine" required>
                             </div>
                             <div class="col-4">
-                                <input class="form-control mb-3" type="text" name="weight_variant" placeholder="WV" >
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="msn" placeholder="MSN" required>
+                            </div>
+                            <div class="col-4">
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="effectivity" placeholder="EFFECTIVITY">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4">
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="selcal" placeholder="SELCAL">
+                            </div>
+                            <div class="col-4">
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="weight_variant" placeholder="WV" >
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <input class="form-control mb-3" type="text" name="notes" placeholder="Notes">
+                                <input autocomplete="off" class="form-control mb-3" type="text" name="notes" placeholder="Notes">
                             </div>
                             <div class="col-4" style="font-size: 1.2rem;">
                                 <input class="form-check-input mb-3" type="checkbox" name="cls" id="cls">
