--- a/html/test.html
+++ b/html/test.html
@@ -8,23 +8,15 @@
 <body>
     <button style="font-size: 4rem;">TEST</button>
 
-    <label>Choose a browser from this list:
-        <input list="browsers" name="myBrowser" /></label>
-        <datalist id="browsers">
-          <option value="Chrome">
-          <option value="Firefox">
-          <option value="Internet Explorer">
-          <option value="Opera">
-          <option value="Safari">
-          <option value="Microsoft Edge">
-        </datalist>
+    
 
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script defer src="../js/init_FB.js"></script>
     <!-- <script defer src="../js/auth.js"></script> -->
-    <script defer src="../js/fetch_data_from_db.js"></script>
+    <!-- <script defer src="../js/fetch_data_from_db.js"></script> -->
     <script defer src="../js/test.js"></script>
+    <script defer src="../js/test1.js"></script>
 </body>
 </html>
