--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <div class="d-flex justify-content-evenly">
-                            <input type="date" name="" id="events_date" onkeydown="event.preventDefault()" onchange="console.log(value)">
+                            <input type="date" id="events_date" onkeydown="event.preventDefault()">
                             <button id="btn_table_sel_ok" type="button" class="btn btn-success">Events OK</button>
                             <button id="btn_table_sel_inp" type="button" class="btn btn-warning">Events in progress</button>
                             <button id="btn_table_sel_all" type="button" class="btn btn-info">All Events</button>
