--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <a class="d-none nav-link logged-in" href="#" id="new_event_link" data-bs-toggle="modal"
                         data-bs-target="#new_event">New Event</a>
                     <a class="d-none nav-link logged-in" href="html/so_page.html" target="_blank" id="service_order_link">Service Order</a>
+                    <a class="d-none nav-link logged-in" href="html/managerial_page.html" target="_blank" id="managerial_link">Managerial</a>
                     <a class="d-none nav-link logged-in" href="html/aircraft_admin.html" target="_blank" id="aircraft_admin_link">A/C Admin</a>
                 </div>
             </div>
@@ -197,7 +198,7 @@
 
 
     <div class="container-fluid bg-light text-light mt-5" id="data">
-        <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="logged-in accordion accordion-flush d-none" id="accordionFlushExample">
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id="date_selected" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
