--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </div>
             </div>
         </div>
-         <table class="table table-bordered d-none" id="myTable">
+         <table class="logged-in table table-bordered d-none" id="myTable">
           <!--  <thead>
                 <tr>
                     <th scope="col">Time</th>
@@ -256,7 +256,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script defer src="js/init_FB.js"></script>
     <script defer src="js/auth.js"></script>
-    <script defer src="js/fetch_data_from_db.js"></script>
+    <!-- <script defer src="js/fetch_data_from_db.js"></script> -->
     <script defer src="js/FB_functions.js"></script>
 </body>
 
