--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script defer src="js/init_FB.js"></script>
     <script defer src="js/auth.js"></script>
-    <!-- <script defer src="js/fetch_data_from_db.js"></script> -->
+    <script defer src="js/fetch_data_from_db.js"></script>
     <script defer src="js/FB_functions.js"></script>
 </body>
 
