--- a/html/managerial_page.html
+++ b/html/managerial_page.html
@@ -40,8 +40,8 @@
     <!-- NAVBAR end -->
 
 
-    <div class="container p-3 bg-secondary text-light">
-        <form id="service_order_form">
+    <div class="container p-3 bg-secondary text-light mt-3">
+        <form id="managerial_order_form">
 
             <!-- permanent data start -->
             <div class="container">
