--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <h2 class="accordion-header">
                     <button id="date_selected" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        <span>Table selections</span>
+                        <span>Tools & Functions</span>
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -225,7 +225,7 @@
             </div>
         </div>
          <table class="logged-in table table-bordered d-none" id="myTable">
-          <!--  <thead>
+           <thead>
                 <tr>
                     <th scope="col">Time</th>
                     <th scope="col">Registration</th>
@@ -241,9 +241,7 @@
                     <th scope="col">Action</th>
                 </tr>
             </thead>
-            <tbody id="table_data">
-    
-            </tbody>-->
+            <tbody id="table_data"></tbody>
         </table> 
     </div>
 
